--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ Flask-Bootstrap==3.3.7.1
 Flask-Login==0.4.0
 Flask-Migrate==2.1.1
 Flask-SQLAlchemy==2.3.2
+Flask-Testing==0.6.2
 Flask-WTF==0.14.2
 itsdangerous==0.24
 Jinja2==2.10
