--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 alembic==0.9.6
+attrs==17.3.0
 click==6.7
+colorama==0.3.9
 dominate==2.3.1
 Flask==0.12.2
 Flask-Bootstrap==3.3.7.1
@@ -13,6 +15,9 @@ Jinja2==2.10
 Mako==1.0.7
 MarkupSafe==1.0
 mysqlclient==1.3.12
+pluggy==0.6.0
+py==1.5.2
+pytest==3.3.0
 python-dateutil==2.6.1
 python-editor==1.0.3
 six==1.11.0
