--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,19 @@ language: python
 python:
   - "2.7"
   - "3.6"
+
 # command to install dependencies
 install:
   - pip install -r requirements.txt
+
+# Setting environment variables
+env:
+  - ENV_VAR=testing
+
+# create a db named test
+before_script:
+  - psql -c 'create database test_db;' -U postgres
+
 # command to run tests
 script:
   - pytest
