--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: python
 python:
-  - "2.7"
+  # - "2.7"
   - "3.6"
 
 # command to install dependencies
@@ -13,7 +13,7 @@ env:
 
 # create a db named test
 before_script:
-  - psql -c 'create database test_db;' -U postgres
+  - psql -c 'create database db_test;' -U postgres
 
 # command to run tests
 script:
