--- a/.travis.yml
+++ b/.travis.yml
@@ -14,8 +14,8 @@ env:
 # create a db named test
 before_script:
   - psql -c "CREATE DATABASE db_test;" -U postgres
-  - psql -c "CREATE USER 'db_admin_name'@'localhost' IDENTIFIED BY 'db_admin_password';" -U postgres
-  - psql -c "GRANT ALL PRIVILEGES ON db_test . * TO 'db_admin_name'@'localhost';" -U postgres
+  - psql -c "CREATE USER db_admin_name IDENTIFIED BY db_admin_password;" -U postgres
+  - psql -c "GRANT ALL PRIVILEGES ON db_test . * TO db_admin_name;" -U postgres
 
 # command to run tests
 script:
