--- a/.travis.yml
+++ b/.travis.yml
@@ -15,9 +15,9 @@ services:
   - mysql
 
 before_install:
-  - mysql -e 'CREATE DATABASE db_test;'
-  - mysql -e 'CREATE USER db_admin_name IDENTIFIED BY db_admin_password;'
-  - mysql -e 'GRANT ALL PRIVILEGES ON db_test . * TO db_admin_name;'
+  - mysql -u root -e 'CREATE DATABASE db_test;'
+  - mysql -u root -e "CREATE USER 'db_admin_name'@'localhost' IDENTIFIED BY 'db_admin_password';"
+  - mysql -u root -e "GRANT ALL PRIVILEGES ON db_test . * TO 'db_admin_name'@'localhost';"
 
 # command to run tests
 script:
