--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ attrs==17.3.0
 click==6.7
 colorama==0.3.9
 dominate==2.3.1
-Flask>0.12.3
+Flask>=0.12.3
 Flask-Bootstrap==3.3.7.1
 Flask-Login==0.4.0
 Flask-Migrate==2.1.1
@@ -14,7 +14,7 @@ itsdangerous==0.24
 Jinja2==2.10
 Mako==1.0.7
 MarkupSafe==1.0
-mysqlclient==1.3.12
+mysqlclient==1.3.13
 pluggy==0.6.0
 py==1.5.2
 pytest==3.3.0
@@ -23,5 +23,5 @@ python-editor==1.0.3
 six==1.11.0
 SQLAlchemy==1.1.15
 visitor==0.1.3
-Werkzeug==0.12.2
+Werkzeug>=0.14
 WTForms==2.1
